--- a/archivist/src/main/resources/templates/user.html
+++ b/archivist/src/main/resources/templates/user.html
@@ -13,17 +13,6 @@
             <h1 class="page-header">Edit User</h1>
         </div>
     </div>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="/gui/users">Users</a>
-                </div>
-            </div>
-
-        </div>
-    </nav>
-
     <div class="container col-sm-8">
     <form id="updateUserForm" autocomplete="off" action="#" role="form" th:action="@{/gui/users/__${user.id}__}" th:object="${userUpdateBuilder}" method="post">
         <div class="form-group">
@@ -58,7 +47,12 @@
         </div>
 
         <div class="form-group">
-            <button type="submit" class="btn btn-default">Save</button>
+            <button type="submit" class="btn btn-default">
+                <span class="glyphicon glyphicon-save"></span> Save
+            </button>
+            <a href="/gui/users" class="btn btn-default">
+                <span class="glyphicon glyphicon-arrow-left"></span> Cancel
+            </a>
         </div>
 
     </form>
