web: added past 24 hour event dropdown.

--- a/archivist/src/main/resources/templates/events.html
+++ b/archivist/src/main/resources/templates/events.html
@@ -22,7 +22,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="event: ${events}">
+            <tr th:each="event: ${events.hits}">
                 <td th:text="${event.type}"></td>
                 <td th:text="${event.message}"></td>
             </tr>
