--- a/archivist/src/main/resources/templates/layout.html
+++ b/archivist/src/main/resources/templates/layout.html
@@ -99,54 +99,19 @@
                     <i class="fa fa-bell fa-fw"></i>  <i class="fa fa-caret-down"></i>
                 </a>
                 <ul class="dropdown-menu dropdown-alerts">
+                    <th:block th:each="event: ${stdEvents.aggregations.type}">
+                        <li>
+                            <a th:href="${'/gui/events?type=' + event.key}">
+                                <div>
+                                    <i class="fa fa-archive fa-fw"></i><th:block th:text="${event.key + '   (' + event.value + ')'}"></th:block>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="divider"></li>
+                    </th:block>
                     <li>
-                        <a href="#">
-                            <div>
-                                <i class="fa fa-comment fa-fw"></i> New Comment
-                                <span class="pull-right text-muted small">4 minutes ago</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                        <a href="#">
-                            <div>
-                                <i class="fa fa-twitter fa-fw"></i> 3 New Followers
-                                <span class="pull-right text-muted small">12 minutes ago</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                        <a href="#">
-                            <div>
-                                <i class="fa fa-envelope fa-fw"></i> Message Sent
-                                <span class="pull-right text-muted small">4 minutes ago</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                        <a href="#">
-                            <div>
-                                <i class="fa fa-tasks fa-fw"></i> New Task
-                                <span class="pull-right text-muted small">4 minutes ago</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                        <a href="#">
-                            <div>
-                                <i class="fa fa-upload fa-fw"></i> Server Rebooted
-                                <span class="pull-right text-muted small">4 minutes ago</span>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="divider"></li>
-                    <li>
-                        <a class="text-center" href="#">
-                            <strong>See All Alerts</strong>
+                        <a class="text-center" href="/gui/events">
+                            <strong>All Events</strong>
                             <i class="fa fa-angle-right"></i>
                         </a>
                     </li>
