--- a/archivist/src/main/resources/templates/analysts.html
+++ b/archivist/src/main/resources/templates/analysts.html
@@ -18,7 +18,8 @@
             <tr>
                 <th>Url</th>
                 <th>State</th>
-                <th>Data</th>
+                <th>Threads</th>
+                <th>Free RAM</th>
                 <th>Last Update</th>
             </tr>
             </thead>
@@ -26,8 +27,9 @@
             <tr th:each="an: ${analysts}">
                 <td th:text="${an.url}"></td>
                 <td th:class="${an.state.name()} == 'UP' ? success : danger" th:text="${an.state.name()}"></td>
-                <td th:text="${an.data}"></td>
-                <td th:text="${#dates.format(an.timeUpdated, 'dd MMM yyyy HH:mm:ss')}"></td>
+                <td th:text="${an.threadCount}"></td>
+                <td th:text="${an.metrics.heap - an.metrics.heap_used}"></td>
+                <td th:text="${#dates.format(an.updatedTime, 'dd MMM yyyy HH:mm:ss')}"></td>
             </tr>
             </tbody>
         </table>
