--- a/archivist/src/main/resources/templates/events.html
+++ b/archivist/src/main/resources/templates/events.html
@@ -35,7 +35,7 @@
                     <tbody>
                     <tr th:each="event: ${events.hits}">
                         <td th:text="${#dates.format(event.timestamp, 'dd-MMM-yyyy hh:mm:ss')}"></td>
-                        <td th:text="${event.type}"></td>
+                        <td th:text="${event.getOrDefault('type', '')}"></td>
                         <td th:text="${event.message}"></td>
                     </tr>
                     </tbody>
