--- a/archivist/src/main/resources/templates/ingests.html
+++ b/archivist/src/main/resources/templates/ingests.html
@@ -13,27 +13,95 @@
             <h1 class="page-header">Ingests</h1>
         </div>
     </div>
-    <div class="table-responsive">
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th>Name</th>
-                <th>Paths</th>
-                <th>Created</th>
-                <th>Updated</th>
-                <th>Errors</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="ingest: ${ingests}">
-                <td th:text="${ingest.name}"></td>
-                <td th:text="${ingest.uris}"></td>
-                <td th:text="${ingest.createdCount}"></td>
-                <td th:text="${ingest.updatedCount}"></td>
-                <td th:text="${ingest.errorCount}"></td>
-            </tr>
-            </tbody>
-        </table>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <button onclick="$('#modalForm').modal({'backdrop': 'static'});" type="button" class="btn btn-default">
+                <span class="glyphicon glyphicon-plus"></span>
+            </button>
+        </div>
+        <div class="panel-body">
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th>State</th>
+                        <th>Name</th>
+                        <th>Created</th>
+                        <th>Updated</th>
+                        <th>Errors</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:class="${ingest.paused} ? primary : default" th:each="ingest: ${ingests}" >
+                        <td>
+                            <div class="btn-group">
+                                <button th:if="${ingest.state == T(com.zorroa.sdk.domain.IngestState).Running}" type="button" class="btn btn-default btn-xs">
+                                    <span class="glyphicon glyphicon-stop" aria-hidden="true"></span> Stop
+                                </button>
+                                <button th:if="${ingest.state == T(com.zorroa.sdk.domain.IngestState).Idle}" type="button" class="btn btn-default btn-xs">
+                                    <span class="glyphicon glyphicon-start" aria-hidden="true"></span> Start
+                                </button>
+
+                                <button th:if="${ingest.paused == true}" type="button" class="btn btn-default btn-xs">
+                                    <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> Resume
+                                </button>
+
+                                <button th:if="${ingest.paused != true}" type="button" class="btn btn-default btn-xs">
+                                    <span class="glyphicon glyphicon-pause" aria-hidden="true"></span> Pause
+                                </button>
+                            </div>
+                        </td>
+
+                        <td th:text="${ingest.name}"></td>
+                        <td th:text="${ingest.createdCount}"></td>
+                        <td th:text="${ingest.updatedCount}"></td>
+                        <td th:text="${ingest.errorCount}"></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+         </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="modalForm" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close">&times;</button>
+                    <h4 class="modal-title">Create Ingest</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="createUserForm" autocomplete="off" action="#" role="form" th:action="@{/gui/ingests}" th:object="${builder}" method="post">
+                        <div class="form-group">
+                            <label for="username">Name</label>
+                            <input type="text" th:field="*{name}" class="form-control" id="username" required="true" describedby="name-success"/>
+                            <span id="name-valid" aria-hidden="true"></span>
+                            <span id="name-success" class="sr-only">(success)</span>
+                            <span id="name-help" class="help-block"></span>
+                            <div class="alert alert-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="uris">Path</label>
+                            <input type="text" th:field="*{uris}" class="form-control" id="uris" required="true"/>
+                            <div class="alert alert-danger" th:if="${#fields.hasErrors('uris')}" th:errors="*{uris}"></div>
+                        </div>
+                        <div class="form-group">
+                            <label for="pipelineId">Pipeline</label>
+                            <select  id="pipelineId" th:field="*{pipelineId}">
+                                <option th:each="pipe: ${pipelines}" th:value="${pipe.id}" th:text="${pipe.name}"></option>
+                            </select>
+                            <div class="alert alert-danger" th:if="${#fields.hasErrors('pipelineId')}" th:errors="*{pipelineId}"></div>
+                        </div>
+                        <button type="submit" class="btn btn-default">Create</button>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
     </div>
     </p>
 </section>
