Ingest execution: refactored ingest execution to do async communcation to the analysts.  Enables progress bar, as well as being able to pause and resume ingests from where you left off.

--- a/archivist/src/main/resources/templates/layout.html
+++ b/archivist/src/main/resources/templates/layout.html
@@ -66,14 +66,16 @@
                                 <div class="progress progress-striped active">
                                     <div th:if="${ingest.errorCount != 0}">
                                         <div class="progress progress-striped active">
-                                            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                            <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="40"
+                                                 aria-valuemin="5" aria-valuemax="100" th:style="${'width:' + ingest.progress + '%'}">
                                                 <th:block th:text="${ingest.createdCount + ' created - ' + ingest.errorCount + ' errors'}"></th:block>
                                             </div>
                                         </div>
                                     </div>
                                     <div th:if="${ingest.errorCount == 0}">
                                         <div class="progress progress-striped active">
-                                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+                                            <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40"
+                                                 aria-valuemin="5" aria-valuemax="100" th:style="${'width:' + ingest.progress + '%'}">
                                                 <th:block th:text="${ingest.createdCount + ' created - ' + ingest.errorCount + ' errors'}"></th:block>
                                             </div>
                                         </div>
