web: fixed zorroa platform link.

--- a/archivist/src/main/resources/templates/layout.html
+++ b/archivist/src/main/resources/templates/layout.html
@@ -45,7 +45,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Zorroa Platform</a>
+            <a class="navbar-brand" href="/gui">Zorroa Platform</a>
         </div>
         <ul class="nav navbar-top-links navbar-right">
             <li><a href="/gui/status"><span id="health" class="label label-warning">UP</span></a></li>
