--- a/archivist/src/main/resources/templates/layout.html
+++ b/archivist/src/main/resources/templates/layout.html
@@ -36,7 +36,7 @@
 <div id="wrapper">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -199,12 +199,10 @@
         </div>
     </nav>
 
-    <div id="page-wrapper">
-        <div class="container-fluid">
-            <section layout:fragment="content">
-                <p>Page content goes here</p>
-            </section>
-        </div>
+    <div id="page-wrapper"  style="margin-left: 220px; padding-right: 0px;">
+        <section layout:fragment="content">
+            <p>Page content goes here</p>
+        </section>
     </div>
     <!-- END CONTENT -->
 </div>
