--- a/archivist/src/main/resources/templates/analysts.html
+++ b/archivist/src/main/resources/templates/analysts.html
@@ -7,11 +7,14 @@
 <body>
 <section layout:fragment="content">
     <p>
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">Analysts</h1>
+    <nav class="navbar navbar-default" style="border-width:0px; border-bottom-width: 1px">
+        <div class="container-fluid">
+            <div class="navbar-header navbar-brand">
+                <span class="fa fa-server2" aria-hidden="true"></span>
+                Analysts
+            </div>
         </div>
-    </div>
+    </nav>
     <div class="table-responsive">
         <table class="table table-striped">
             <thead>
