--- a/archivist/src/main/resources/templates/assets.html
+++ b/archivist/src/main/resources/templates/assets.html
@@ -14,15 +14,18 @@
 
 <section layout:fragment="content">
     <p>
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">Assets</h1>
+    <nav class="navbar navbar-default" style="border-width:0px; border-bottom-width: 1px">
+        <div class="container-fluid">
+            <div class="navbar-header navbar-brand">
+                <span class="fa fa-file-image-o" aria-hidden="true"></span>
+                Assets
+            </div>
+            <form action="#" th:action="@{/gui/assets}" th:object="${search}" method="post" class="navbar-form navbar-center">
+                <input type="text" class="form-control" th:field="*{query}" placeholder="Search..."/>
+                <button type="submit" class="btn btn-default">Search</button>
+            </form>
         </div>
-    </div>
-    <form action="#" th:action="@{/gui/assets}" th:object="${search}" method="post" class="navbar-form navbar-center">
-        <input type="text" class="form-control" th:field="*{query}" placeholder="Search..."/>
-        <button type="submit" class="btn btn-default">Search</button>
-    </form>
+    </nav>
 
     <ul class="media-list">
         <li th:each="asset: ${result}" class="media">
