--- a/archivist/src/main/resources/templates/events.html
+++ b/archivist/src/main/resources/templates/events.html
@@ -8,20 +8,24 @@
 
 <section layout:fragment="content">
     <p>
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">Events</h1>
-        </div>
-    </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">
+    <nav class="navbar navbar-default" style="border-width:0px; border-bottom-width: 1px">
+        <div class="container-fluid">
+            <div class="navbar-header navbar-brand">
+                <span class="fa fa-bell" aria-hidden="true"></span>
+                Events
+            </div>
+
             <ul class="nav nav-pills" role="tablist">
-            <th:block th:each="type: ${events.aggregations.type}">
-                <li role="presentation"><a th:href="${'/gui/events?type='+type.key}"><th:block th:text="${type.key}"/>
-                    <span class="badge" th:text="${type.value}">0</span></a></li>
-            </th:block>
+                <th:block th:each="type: ${events.aggregations.type}">
+                    <li role="presentation"><a th:href="${'/gui/events?type='+type.key}"><th:block th:text="${type.key}"/>
+                        <span class="badge" th:text="${type.value}">0</span></a></li>
+                </th:block>
             </ul>
+
         </div>
+    </nav>
+
+    <div class="panel panel-default" style="border-width: 0px;">
         <div class="panel-body">
             <div class="table-responsive">
                 <table class="table table-striped">
