--- a/archivist/src/main/resources/templates/fields.html
+++ b/archivist/src/main/resources/templates/fields.html
@@ -8,11 +8,15 @@
 
 <section layout:fragment="content">
     <p>
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">Fields</h1>
+    <nav class="navbar navbar-default" style="border-width:0px; border-bottom-width: 1px">
+        <div class="container-fluid">
+            <div class="navbar-header navbar-brand">
+                <span class="fa fa-list" aria-hidden="true"></span>
+                Fields
+            </div>
         </div>
-    </div>
+    </nav>
+    <div class="container-fluid">
     <div th:each="type: ${fields}">
         <div class="panel panel-default">
             <div class="panel-heading" th:text="${type.key}"></div>
@@ -25,6 +29,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
     </p>
 </section>
