--- a/archivist/src/main/resources/templates/pipelines.html
+++ b/archivist/src/main/resources/templates/pipelines.html
@@ -8,11 +8,15 @@
 
 <section layout:fragment="content">
     <p>
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">Pipelines</h1>
+    <nav class="navbar navbar-default" style="border-width:0px; border-bottom-width: 1px">
+        <div class="container-fluid">
+            <div class="navbar-header navbar-brand">
+                <span class="fa fa-cogs" aria-hidden="true"></span>
+                Pipelines
+            </div>
         </div>
-    </div>
+    </nav>
+    <div class="container-fluid">
     <div th:each="pipeline: ${pipelines}">
         <div class="panel panel-default">
             <div class="panel-heading" th:text="${pipeline.name}"></div>
@@ -43,6 +47,7 @@
                 </table>
             </table>
         </div>
+    </div>
     </div>
     </p>
 </section>
