--- a/archivist/src/main/resources/templates/plugins.html
+++ b/archivist/src/main/resources/templates/plugins.html
@@ -8,11 +8,15 @@
 
 <section layout:fragment="content">
     <p>
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">Plugins</h1>
+    <nav class="navbar navbar-default" style="border-width:0px; border-bottom-width: 1px">
+        <div class="container-fluid">
+            <div class="navbar-header navbar-brand">
+                <span class="fa fa-lock" aria-hidden="true"></span>
+                Plugins
+            </div>
         </div>
-    </div>
+    </nav>
+    <div class="container-fluid">
     <div th:each="plugin: ${plugins}">
         <div class="panel panel-default">
             <div class="panel-heading" th:text="${plugin.name}"></div>
@@ -41,6 +45,7 @@
                 </table>
             </table>
         </div>
+    </div>
     </div>
     </p>
 </section>
