--- a/archivist/src/main/resources/templates/users.html
+++ b/archivist/src/main/resources/templates/users.html
@@ -7,17 +7,21 @@
 <body>
 <section layout:fragment="content">
     <p>
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">Users</h1>
+    <nav class="navbar navbar-default" style="border-width:0px; border-bottom-width: 1px">
+        <div class="container-fluid">
+            <div class="navbar-header navbar-brand">
+                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                Users
+            </div>
+            <div class="nav navbar-nav navbar-right">
+                <button onclick="$('#modalForm').modal({'backdrop': 'static'});" type="button" class="btn btn-default">
+                    <span class="glyphicon glyphicon-plus"></span>
+                </button>
+
+            </div>
         </div>
-    </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <button onclick="$('#modalForm').modal({'backdrop': 'static'});" type="button" class="btn btn-default">
-                <span class="glyphicon glyphicon-plus"></span>
-            </button>
-        </div>
+    </nav>
+    <div class="panel panel-default" style="border-width: 0px;">
         <div class="panel-body">
             <div class="table-responsive">
             <table class="table table-striped">
