--- a/archivist/src/main/resources/templates/ingest.html
+++ b/archivist/src/main/resources/templates/ingest.html
@@ -8,30 +8,45 @@
 
 <section layout:fragment="content">
     <p>
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">Edit Ingest</h1>
-        </div>
-    </div>
+        <nav class="navbar navbar-default" style="border-width:0px; border-bottom-width: 1px">
+            <div class="container-fluid">
+                <div class="navbar-header navbar-brand">
+                    <span class="fa fa-folder" aria-hidden="true"></span>
+                    Ingest
+                </div>
+            </div>
+        </nav>
     <div class="container col-sm-8">
-        <form id="updateUserForm" autocomplete="off" action="#" role="form" th:action="@{/gui/ingests/__${ingest.id}__}" th:object="${ingestUpdateBuilder}" method="post">
+
+        <form id="ingestUpdateBuilder" autocomplete="off" action="#" role="form" th:action="@{/gui/ingests/__${ingest.id}__}" th:object="${ingestUpdateBuilder}" method="post">
+            <div th:if="${#fields.hasGlobalErrors()}">
+                <p th:each="err : ${#fields.globalErrors()}" th:text="${err}">...</p>
+            </div>
             <div class="form-group">
                 <label for="name">Label:</label>
-                <input id="name" type="email" class="form-control" th:value="${ingest.name}" th:name="name" th:id="name"/>
+                <input id="name" type="text" class="form-control" th:value="${ingest.name}" th:name="name" th:id="name"/>
                 <div class="alert alert-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
             </div>
 
             <div class="form-group">
                 <label>URIs:</label>
-                <div class="list-group">
+                <div id="uriList" class="list-group">
                     <li class="list-group-item" th:each="uri: ${ingest.uris}">
                     <th:block th:text="${uri}"></th:block>
-                        <a href="#" style="float: right">
+                        <a class="uriDeleteButton" href="#" style="float: right">
                             <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
                         </a>
+                        <input name="uris" type="hidden" th:value="${uri}"/>
                     </li>
                 </div>
-                <div class="alert alert-danger" th:if="${#fields.hasErrors('uris')}" th:errors="*{email}"></div>
+                <div class="input-group">
+                    <span class="input-group-btn">
+                        <button id="addUriButton" class="btn btn-default" type="button">Add URI</button>
+                    </span>
+                    <input id="addUriText" type="text" class="form-control"/>
+                </div>
+
+                <div class="alert alert-danger" th:if="${#fields.hasErrors('uris')}" th:errors="*{uris}"></div>
             </div>
 
             <div class="form-group">
@@ -45,6 +60,29 @@
 
         </form>
     </div>
+    <script th:inline="javascript" type="text/javascript">
+        //<![CDATA[
+        $(document).ready(function(e) {
+            $('#addUriButton').click(function()  {
+                var val = $('#addUriText').val();
+                if (val.length > 0) {
+                    $('#uriList').append("<li class='list-group-item'>"
+                            + val
+                            + "<a class=\"uriDeleteButton\" href=\"#\" style=\"float: right\">"
+                            + "<span class=\"glyphicon glyphicon-remove-circle\"></span>"
+                            + "</a>"
+                            + "<input type=\"hidden\" name=\"uris\" value=\"" + val + "\">");
+                }
+            });
+
+            $(document).on("click",".uriDeleteButton",function(){
+                console.log("bar!");
+                $(this).parent().remove();
+            });
+
+        });
+        //]]>
+    </script>
     </p>
 </section>
 
